@@ -26,6 +26,12 @@
 			GUI: TThe XLayout and YLayout can now handle rendering direction of 
 			elements other than Left-Right and Top-Bottom.
 		 (<i>Adam Franco</i>)
+		<li/> Bug Fix:
+	 
+			ImageProcessor: Now if Image Magick barfs on some multi-page PDFs and 
+			generates a single black pixel as a thumbnail, it won't be saved and 
+			the nice default icon will be used instead.
+		 (<i>Adam Franco</i>)
 	</ul><br/><h2>Version 0.7.6</h2><h3>2006-08-15</h3><ul>
 		<li/> Bug Fix:
 	 
